--- a/test1/style.css
+++ b/test1/style.css
@@ -1,48 +1,60 @@
-#topics {
-        position: relative;
-        z-index: 10;
-    padding-top: 3vw;
-    .hide {
-        display:none;
-    }
+.tabs {
+  display: flex;
+  flex-wrap: wrap;
 }
- 
-.tab{
-    overflow:hidden;
-    li{
-    list-style: none;
-        padding: 0 0 20px 0;
-        margin-right:20px;
-        flex: 1;
-        text-align: center;
-        border-bottom: 2px solid #ddd;
-        font-weight: 600;
-        letter-spacing: .05em;
-        img {
-            max-width: 80px;
-            display: block;
-            margin: 10px auto;
-        }
-        &:last-child {
-            margin-right: 0;
-        }
-        &:hover {
-            cursor: pointer;
-            color: #000080;
-        }
-    }
-    .select {
-        border-bottom: 2px solid #000080;
-        color: #000080;
-    }
+
+.tab_label {
+  color: #13c3ac;
+  font-weight: bold;
+  border: solid 2px #13c3ac;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  flex: 1;
+  padding: 5px 0;
+  margin: 0 5px; 
 }
- 
-.topicon  {
-    div {
-    padding: 50px;
-    p {
-      line-height: 2;
-      letter-spacing: .1em;
-    }
-    }
+
+.tab_label:hover {
+  opacity: 0.75;
+}
+
+.tab_content {
+  flex: 100%;
+  display: none;
+  overflow: hidden;
+}
+
+input[name="tab_switch"] {
+  display: none;
+}
+
+.tabs input:checked + .tab_label {
+  color: #fff;
+  background-color: #13c3ac;
+}
+.tabs input:checked + .tab_label::after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 10px 0 10px;
+  border-color: #13c3ac transparent transparent transparent;
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -10px;
+  transition: all 0.3s ease 0s;
+}
+
+#tab01:checked ~ #tab01_content,
+#tab02:checked ~ #tab02_content,
+#tab03:checked ~ #tab03_content {
+  display: block;
+}
+
+.tab_content{
+  position: relative;
+  animation: fadeIn 1s ease;
 }
